--- a/lang/en.json
+++ b/lang/en.json
@@ -46,6 +46,13 @@
     "activateNoInit": "Tried to activate a conversation when the ConversationHUD object was not yet initialized",
     "activateNoPerms": "You do not have permission to activate this conversation.",
 
+    "noActiveConversation": "No active conversation found.",
+    "saveUnsuccessful": "Failed to save current conversation.",
+
     "noLibWrapper": "ConversationHUD requires the libWrapper module for full functionality. Please install and activate it."
+  },
+
+  "CHUD.info": {
+    "saveSuccessful": "Current conversation has been saved successfully."
   }
 }
