--- a/lang/en.json
+++ b/lang/en.json
@@ -41,6 +41,7 @@
   "CHUD.errors": {
     "generic": "An unknown error occurred while trying to render the sheet. Are you sure this is a valid conversation sheet?",
     "failedToParse": "Failed to parse sheet data. Are you sure this is a valid conversation sheet?",
+    "invalidActor": "The provided actor is of an invalid format and could not be parsed properly.",
 
     "activateNoPages": "Tried to activate a conversation with a document containing no pages.",
     "activateNoInit": "Tried to activate a conversation when the ConversationHUD object was not yet initialized",
