Add drag & drop support for MEJ person sheet

--- a/lang/en.json
+++ b/lang/en.json
@@ -44,6 +44,7 @@
     "generic": "An unknown error occurred while trying to render the sheet. Are you sure this is a valid conversation sheet?",
     "failedToParse": "Failed to parse sheet data. Are you sure this is a valid conversation sheet?",
     "invalidActor": "The provided actor is of an invalid format and could not be parsed properly.",
+    "typeNotSupported": "This type of data is not supported by ConversationHUD.",
 
     "activateNoPages": "Tried to activate a conversation with a document containing no pages.",
     "activateNoInit": "Tried to activate a conversation when the ConversationHUD object was not yet initialized",
