--- a/lang/en.json
+++ b/lang/en.json
@@ -108,6 +108,10 @@
         "large": "Large",
         "veryLarge": "Very Large"
       }
+    },
+    "rpgUiFix": {
+      "name": "Enable custom UI fix",
+      "hint": "If you are using a module that changes the look of the UI and you are experiencing an issue which makes the sidebar overlap the conversation interface or the control buttons, enabling this feature should fix the issues."
     }
   }
 }
