Rework the CSS of the conversation wrapper and add misc improvements

--- a/lang/en.json
+++ b/lang/en.json
@@ -73,6 +73,7 @@
       "hint": "The color of the banner."
     },
 
+    "unaffiliated": "Unaffiliated",
     "noBannerPreview": "No banner preview available",
     "bannerPreview": "Banner Preview"
   },
