--- a/lang/en.json
+++ b/lang/en.json
@@ -136,15 +136,19 @@
       "hint": "Toggle the Minimize feature on or off. By default, the feature is on as it allows users to interact with the map while a conversation is active and visible. If you do not want this behavior, you can toggle the feature off."
     },
     "activeParticipantFontSize": {
-      "name": "Active Participant Font Size",
-      "hint": "This option determines the size of the font used to display the name of the currently active participant.",
-      "choices": {
-        "verySmall": "Very Small",
-        "small": "Small",
-        "regular": "Regular",
-        "large": "Large",
-        "veryLarge": "Very Large"
-      }
+      "name": "Participant Font Size",
+      "hint": "This option determines the size of the font used to display the name of the currently active participant."
+    },
+    "activeParticipantFactionFontSize": {
+      "name": "Participant Faction Font Size",
+      "hint": "This option determines the size of the font used to display the name of the faction to which the currently active participant belongs to."
+    },
+    "fontSizeOptions": {
+      "verySmall": "Very Small",
+      "small": "Small",
+      "regular": "Regular",
+      "large": "Large",
+      "veryLarge": "Very Large"
     },
     "rpgUiFix": {
       "name": "Enable custom UI fix",
