Fix issues found while testing the new changes

--- a/lang/en.json
+++ b/lang/en.json
@@ -13,7 +13,7 @@
 
     "currentParticipants": "Current Participants",
     "noActiveParticipant": "No active participant",
-    "noParticipantsInList": "Conversation has no participants. Try adding some. (Actor drag and drop is supported)",
+    "noParticipantsInList": "Conversation has no participants. Try adding some. (Drag and drop is supported)",
 
     "conversationEntry": "Conversation Entry",
     "participantData": "Conversation Participant Data",
