Add option to link a journal entry to a participant + misc code improvements

--- a/lang/en.json
+++ b/lang/en.json
@@ -36,6 +36,7 @@
     "activateConversation": "Activate Conversation",
     "createConversation": "Create Conversation",
     "startConversation": "Start Conversation",
+    "closeConversation": "Close Conversation",
 
     "saveConversation": "Save Conversation",
 
