--- a/lang/en.json
+++ b/lang/en.json
@@ -6,6 +6,10 @@
     "portrait": "Portrait",
     "portraitHint": "Portrait of the conversation participant.",
 
+    "linkedJournal": "Linked Journal",
+    "linkedJournalHint": "Journal entry that will be linked to the conversation participant.",
+    "noLinkedJournal": "No linked journal",
+
     "conversationName": "Conversation Name",
     "conversationParticipants": "Conversation Participants",
 
@@ -26,13 +30,19 @@
 
     "dropActor": "Drop actor here to add them to the conversation",
 
-    "anonymous": "Anonymous"
+    "anonymous": "Anonymous",
+    "active": "Active",
+    "banner": "Banner",
+    "details": "Details",
+    "actions": "Actions",
+
+    "invalidDocumentRef": "Invalid document reference"
   },
 
   "CHUD.dialogue": {
     "onCloseActiveConversation": {
       "title": "Are you sure?",
-      "content": "Are you sure you want to close this conversation? Any unsaved changes or modifications will be lost.",
+      "content": "Are you sure you want to close this conversation? Any unsaved changes will be lost.",
       "confirm": "Yes",
       "reject": "No"
     },
@@ -137,7 +147,9 @@
     "insufficientRights": "Insufficient user rights.",
     "featureNotEnabled": "Feature is currently disabled. Enabled it in the settings if you wish to use it.",
 
-    "noLibWrapper": "ConversationHUD requires the libWrapper module for full functionality. Please install and activate it."
+    "noLibWrapper": "ConversationHUD requires the libWrapper module for full functionality. Please install and activate it.",
+
+    "invalidJournalEntry": "Invalid journal entry provided, please make sure that the provided journal entry is valid and has not been removed."
   },
 
   "CHUD.warnings": {
