--- a/lang/en.json
+++ b/lang/en.json
@@ -192,6 +192,10 @@
       "name": "Enable Minimize",
       "hint": "Toggle the Minimize feature on or off. By default, the feature is on as it allows users to interact with the map while a conversation is active and visible. If you do not want this behavior, you can toggle the feature off."
     },
+    "enableSceneConversations": {
+      "name": "Enable Scene Conversations",
+      "hint": "Toggle the Scene Conversation feature on or off. By default, the feature is on and it allows users to link a conversation to a scene and when the scene is activated the conversation will open automatically. The conversation selector can be found on the Ambience tab of the Scene Config Sheet. If you do not want this behavior, you can toggle the feature off."
+    },
     "activeParticipantFontSize": {
       "name": "Participant Font Size",
       "hint": "This option determines the size of the font used to display the name of the currently active participant."
