--- a/lang/en.json
+++ b/lang/en.json
@@ -99,6 +99,7 @@
 
     "toggleSpeakAs": "Toggle Speak As",
     "toggleVisibility": "Toggle Visibility",
+    "toggleBackgroundBlur": "Toggle Background Blur",
     "maximizeConversation": "Maximize Conversation",
     "minimizeConversation": "Minimize Conversation",
 
@@ -243,6 +244,14 @@
     "enableSceneConversations": {
       "name": "Enable Scene Conversations",
       "hint": "Toggle the Scene Conversation feature on or off. By default, the feature is on and it allows users to link a conversation to a scene and when the scene is activated the conversation will open automatically. The conversation selector can be found on the Ambience tab of the Scene Config Sheet. If you do not want this behavior, you can toggle the feature off."
+    },
+    "enableBlurToggle": {
+      "name": "Enable Background Blur Toggle",
+      "hint": "Toggle to Background Blur Toggle feature on or off. By default, the feature is on as it allows the DM to showcase the background image without minimizing the conversation. If you do not want this behavior, you can toggle the feature off."
+    },
+    "blurAmount": {
+      "name": "Blur Amount",
+      "hint": "The amount of blur (in pixels) that will be applied to the background when a conversation is active. An amount of zero pixels will disable the background blur completely."
     },
     "activeParticipantFontSize": {
       "name": "Participant Font Size",
