Add option to hide participant names

--- a/lang/en.json
+++ b/lang/en.json
@@ -3,6 +3,11 @@
     "name": "Name",
     "nameHint": "Name of the conversation participant.",
 
+    "displayName": {
+      "name": "Display name",
+      "hint": "Toggle the display of the participant's name. When off, Unknown will be displayed instead of the name."
+    },
+
     "portrait": "Portrait",
     "portraitHint": "Portrait of the conversation participant.",
 
