Add auto portrait style This portrait style is agnostic to any aspect ratios and just fits the images it is provided.

--- a/lang/en.json
+++ b/lang/en.json
@@ -224,7 +224,8 @@
       "choices": {
         "vertical": "Vertical",
         "horizontal": "Horizontal",
-        "square": "Square"
+        "square": "Square",
+        "auto": "Auto"
       }
     },
     "portraitAnchorVertical": {
