--- a/lang/fr.json
+++ b/lang/fr.json
@@ -224,7 +224,8 @@
       "choices": {
         "vertical": "Vertical",
         "horizontal": "Horizontal",
-        "square": "Carré"
+        "square": "Carré",
+        "auto": "Auto"
       }
     },
     "portraitAnchorVertical": {
