--- a/lang/en.json
+++ b/lang/en.json
@@ -39,6 +39,12 @@
 
     "conversationName": "Conversation Name",
     "conversationParticipants": "Conversation Participants",
+    "conversationSettings": "Conversation Settings",
+
+    "conversationBackground": {
+      "name": "Conversation Background",
+      "hint": "An image that will be displayed as the background of this conversation. If no image is selected, a dark semi-transparent background will be shown instead."
+    },
 
     "newParticipant": "New Participant",
 
@@ -117,7 +123,7 @@
 
     "toggleSpeakAs": "Toggle Speak As",
     "toggleVisibility": "Toggle Visibility",
-    "toggleBackgroundBlur": "Toggle Background Blur",
+    "toggleBackgroundBlur": "Toggle Background",
     "maximizeConversation": "Maximize Conversation",
     "minimizeConversation": "Minimize Conversation",
 
