--- a/lang/fr.json
+++ b/lang/fr.json
@@ -142,6 +142,7 @@
       "deselectAll": "Tout Désélectionner"
     },
 
+    "changeConversationBackground": "Change Conversation Background",
     "pullParticipants": "Extraire les Participants de la Scène",
     "addActors": "Ajouter des Acteurs"
   },
