--- a/lang/en.json
+++ b/lang/en.json
@@ -305,6 +305,10 @@
       "name": "Remember Minimization",
       "hint": "Remember minimization status between different conversations. By default, the feature is off so that every new conversation will start maximized. Enable this feature to have new conversations pick up the previous minimization state. Minimization state resets on page reload."
     },
+    "clearActiveParticipantOnVisibilityChange": {
+      "name": "Clear Active Participant on Visibility Change",
+      "hint": "Toggle whether or not to clear the currently active participant whenever the conversation visibility is toggled off."
+    },
     "enableSceneConversations": {
       "name": "Enable Scene Conversations",
       "hint": "Toggle the Scene Conversation feature on or off. By default, the feature is on and it allows users to link a conversation to a scene and when the scene is activated the conversation will open automatically. The conversation selector can be found on the Ambience tab of the Scene Config Sheet. If you do not want this behavior, you can toggle the feature off."
@@ -329,7 +333,7 @@
       "veryLarge": "Very Large"
     },
     "rpgUiFix": {
-      "name": "Enable custom UI fix",
+      "name": "Enable Custom UI Fix",
       "hint": "If you are using a module that changes the look of the UI and you are experiencing an issue which makes the sidebar overlap the conversation interface or the control buttons, enabling this feature should fix the issues."
     }
   }
