Rework: Migrate conversation add/edit form to application v2

--- a/lang/en.json
+++ b/lang/en.json
@@ -172,8 +172,10 @@
   },
 
   "CHUD.tabs": {
-    "participantConfig": "Participant Config",
-    "factionConfig": "Faction Config"
+    "conversationParticipantAddEdit": {
+      "participant": "Participant Config",
+      "faction": "Faction Config"
+    }
   },
 
   "CHUD.faction": {
